# Data-Structure-Trees

./: Avl.cpp  CMakeLists.txt  README.md  main.cpp
Application/: Application.cpp  Application.h
Avl/: Avl.cpp  Avl.h
BST/: BST.cpp  BST.h
Heap/: heap.cpp  heap.h  heap_abstract_class.h  max_heap.cpp  max_heap.h  min_heap.cpp  min_heap.h
Min_heap/: min_heap.cpp
Students_database/: student.cpp  student.h  students_DB.cpp
